# anime-diffusion

./: .gitignore  download-images.sh  main.py  pyproject.toml
configs/: default.yaml
configs/data/: anime.yaml
configs/model/: small.yaml
configs/train/: default.yaml
src/: dataset.py  trainer.py
src/model/: backbone.py  diffusion.py  test_model.py  time_encoding.py  uvit.py
