
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pierrot LeCon", email = "pstmrtem@outlook.com"},
]
dependencies = [
    "torch>=2.0.1",
    "imageio>=2.31.1",
    "wandb>=0.15.4",
    "einops>=0.6.1",
    "torchinfo>=1.8.0",
    "hydra-core>=1.3.2",
    "tqdm>=4.65.0",
    "torchvision>=0.15.2",
    "numpy>=1.25.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}
